--- a/build.gradle
+++ b/build.gradle
@@ -31,10 +31,11 @@ repositories {
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-webflux')
 	compile 'commons-codec:commons-codec:1.11'
+	compile 'commons-io:commons-io:2.6'
 	compile 'com.auth0:java-jwt:3.3.0'
 	compile 'io.jsonwebtoken:jjwt:0.9.0'
-	compile 'com.fasterxml.jackson.core:jackson-core:2.9.4'
-	compile 'com.fasterxml.jackson.core:jackson-databind:2.9.4'
+	//compile 'com.fasterxml.jackson.core:jackson-core:2.9.4'
+	//compile 'com.fasterxml.jackson.core:jackson-databind:2.9.4'
 
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	testCompile('io.projectreactor:reactor-test')
